# starknet-remote-signer

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  config.toml  docker-compose.yml  fmt_check.txt  production.toml  test_integration.sh
.github/workflows/: release.yml
docs/: RELEASE.md
scripts/: release.sh
src/: audit.rs  config.rs  constants.rs  errors.rs  integration_test.rs  key_management.rs  keystore.rs  lib.rs  main.rs  security.rs  server.rs  signer.rs  validation.rs
src/cli/: commands.rs  mod.rs
src/config/: keystore.rs  loader.rs  mod.rs  types.rs  validation.rs
src/handlers/: health.rs  metrics.rs  mod.rs  public_key.rs  sign.rs  types.rs
src/key_management/: add.rs  delete.rs  list.rs  mod.rs  service.rs
src/keystore/: core.rs  encryption.rs  key_material.rs  mod.rs  secure_memory.rs  shared.rs  tests.rs
src/keystore/backends/: environment.rs  factory.rs  file.rs  mod.rs  os_keyring.rs  software.rs  utils.rs
src/middleware/: mod.rs  security.rs
src/security/: mod.rs  tests.rs  validator.rs
src/server/: mod.rs  state.rs  tests.rs
src/services/: mod.rs  signing.rs
src/signer/: mod.rs  starknet_signer.rs  tests.rs  transaction_hash.rs
src/utils/: ip.rs  mod.rs  password.rs  secure_string.rs  tls.rs
src/validation/: attestation_info.rs  chain_contracts.rs  mod.rs  tests.rs  validator.rs
