[package]
name = "starknet-remote-signer"
version = "0.1.0"
edition = "2021"
description = "A secure remote signing service for Starknet validators"
license = "Apache-2.0"
authors = ["Starknet Remote Signer Team"]

[dependencies]
# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { version = "1.0", features = ["full"] }

# Starknet & Crypto
starknet = "0.15"
starknet-crypto = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date & Time
chrono = { version = "0.4", features = ["serde"] }

# Configuration & CLI
clap = { version = "4.0", features = ["derive", "env"] }
config = "0.14"
toml = "0.8"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1.88"

# Security & Crypto
rand = "0.8"
hex = "0.4"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }

# TLS support
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2.0"
axum-server = { version = "0.7", features = ["tls-rustls"] }

# OS Keyring support - Cross-platform secure credential storage
# apple-native: macOS/iOS Keychain
# linux-native-sync-persistent: Linux keyutils + Secret Service combo (best Linux option)
# windows-native: Windows Credential Manager
# crypto-rust: Crypto support for Secret Service (avoids OpenSSL dependency)
keyring = { version = "3.6.2", features = ["apple-native", "linux-native-sync-persistent", "crypto-rust"] }

# Platform-specific keyring implementations are now handled by keyring crate features

[dev-dependencies]
axum-test = "17.3"
tempfile = "3.0"

[features]
default = []

[lib]
name = "starknet_remote_signer"
path = "src/lib.rs"

[[bin]]
name = "starknet-remote-signer"
path = "src/main.rs"